--- a/views/welcome.jade
+++ b/views/welcome.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{product}
-  form(name='register', action='/', method='post')
+  form(name='register', action='/welcome', method='post')
     div.inputs
       span.label Enter your 5 digit US Postal Code to continue 
       input(type='text', name='zip', pattern='^\\d{5}$', required title='5 digit zip code', maxlength=5)
